--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payu-checkout-webview",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "payu checkout webview",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -43,7 +43,9 @@
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "install": "npm run build"
+
   },
   "devDependencies": {
     "@capacitor/android": "^6.0.0",
